# chess_ui

./: Cargo.toml  index.html
src/: chess.rs  chess_client.rs  deserialize.rs  lib.rs  main.rs  serialize.rs
src/chess/: board.rs  piece.rs
src/chess_client/: board_widget.rs  piece_widget.rs  promote_widget.rs
